test/Lower/circt/round_trip/conversion_failure_exits_nonzero.nsl
// SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
//
// test/Lower/circt/round_trip/conversion_failure_exits_nonzero.nsl
// — M6 US1 harness fixture (T029). Asserts FR-028 fail-fast
// behaviour: when the M6 NSLToCIRCTPass cannot legalize a
// reachable `nsl::*` op, `nslc -emit=hw` exits non-zero AND emits
// a diagnostic naming the unmatched op.
//
// **Phase 4 status: PASSES** — Phase 4 lands the ModuleOp /
// DeclareOp / Port / Submodule / Param structural rewrites plus
// inline ConstantOp / TransferOp-to-output-port handling. The
// fixture body now uses `reg r[8] = 0;` + `r := a;` (clocked
// transfer to a register) — `nsl.reg` and `nsl.clocked_transfer`
// are Phase-5/6 territory (state family + FSM), so the structural
// pre-pass aborts with the documented diagnostic. Once Phase 6
// lands the state-family patterns, this fixture must be updated
// again to exercise some op kind whose pattern hasn't shipped, OR
// retired in Phase 8 polish.

// RUN: not %nslc -emit=hw %s 2>&1 | %FileCheck %s

declare M {
  input a[8];
  output q[8];
}

module M {
  reg r[8] = 0;
  r := a;
  q = r;
}

// CHECK: error: M6 Phase 4 has no conversion pattern for op 'nsl.{{[a-z_]+}}'
